List view + content + style

--- a/_data/prototypes/current/Spark20170124.md
+++ b/_data/prototypes/current/Spark20170124.md
@@ -1,5 +1,5 @@
 Title: Spark 2017.1.24
-Desc: These spark prototypes are designed for release on 2017.1.24
+Desc: These spark prototypes were designed for release on 2017.1.24
 Date: 2017-1-15
 ---
 
