--- a/_data/prototypes/current/Spark20170124.md
+++ b/_data/prototypes/current/Spark20170124.md
@@ -5,23 +5,22 @@ Date: 2017-1-15
 
 # Mobile
 
-## link
+## Prototype Link
 
 [https://uxccds.github.io/SparkMobile/SparkMobileP5/spark.html](https://uxccds.github.io/SparkMobile/SparkMobileP5/spark.html)
 
-## usage
+## How-tos
 
-1) Please use Chrome (mobile mode) or Iphone (webapp mode) to view the prototype.
+1) Please use Chrome (mobile mode) or iPhone (webapp mode) to view the prototype.
 
-2) Do clear the cache if you see any issues at first.
-
+2) Try clear browser cache first if you encounter any issue.
 
 # Desktop
 
-## link
+## Prototype Link
 
 [https://uxccds.github.io/Spark-Hype-MVO/Spark-MVO-Prototype-currentBuild.html](https://uxccds.github.io/Spark-Hype-MVO/Spark-MVO-Prototype-currentBuild.html)
 
-## usage
+## How-tos
 
 1) Please use Chrome to view this prototype.
