--- a/_data/prototypes/current/Spark20170124.md
+++ b/_data/prototypes/current/Spark20170124.md
@@ -15,6 +15,9 @@ Cover: prototypes/cover/Spark20170124_Cover.png
 
 # Instuctions for use
 
+![mobile](../../../img_data/prototypes/Mobile-2x.png)
+![Desktop](../../../img_data/prototypes/Desktop-2x.png)
+
 ### On Mobile
 
 1) Please use Chrome (mobile mode) or iPhone (webapp mode) to view the prototype.
