--- a/_data/prototypes/current/Spark20170124.md
+++ b/_data/prototypes/current/Spark20170124.md
@@ -4,11 +4,11 @@ Date: 2017-1-15
 Cover: prototypes/cover/Spark20170124_Cover.png
 ---
 
-### Mobile Prototype
+#### Mobile Prototype
 
 [spark.html](https://uxccds.github.io/SparkMobile/SparkMobileP5/spark.html)
 
-### Desktop Prototype
+#### Desktop Prototype
 
 [Spark-MVO-Prototype-currentBuild.html](https://uxccds.github.io/Spark-Hype-MVO/Spark-MVO-Prototype-currentBuild.html)
 
