--- a/_data/prototypes/current/Spark20170124.md
+++ b/_data/prototypes/current/Spark20170124.md
@@ -13,7 +13,7 @@ Cover: prototypes/cover/Spark20170124_Cover.png
 [Spark-MVO-Prototype-currentBuild.html](https://uxccds.github.io/Spark-Hype-MVO/Spark-MVO-Prototype-currentBuild.html)
 
 
-# Instuctions
+# Instructions
 
 ![mobile](../../../img_data/prototypes/Mobile-2x.png)
 ![Desktop](../../../img_data/prototypes/Desktop-2x.png)
